--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "esbuild": "^0.17.16",
     "marked": "^4.2.12",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
@@ -27,7 +28,7 @@
     "jsdom": "^21.1.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4",
+    "vite": "^4.2.1",
     "vitest": "^0.29.1"
   }
 }
